# tuner-test-framework

./: .gitignore  README.md  TODO  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: api-model.md  architecture.md  cli-recorder.md  test-case-design.md  tools.md
examples/: apimodel_define_example.py  apimodel_example.py  apimodel_usage_example.py  curl  har.json  log_example.py  playwright_screenshot_example.py  爱琅DMS-Autho.apifox.json  获取用户.apifox.json
src/tuner/: __init__.py
src/tuner/api/: __init__.py  auth.py  base.py  body.py  environment.py  operations.py  response.py
src/tuner/cli/: __init__.py
src/tuner/cli/recorder/: __init__.py  addon.py  codegen.py  main.py
src/tuner/ui/: __init__.py  auth_handler.py  core.py  playwright_client.py
src/tuner/util/: __init__.py  db.py  log.py
tests/: __init__.py  test_apimodel_core.py  test_apimodel_operations.py
tests/intergration/: README.md  __init__.py  envieronment.py  test_apimodel_assertion.py
tests/intergration/apimodels/: __init__.py  delete_anything.py  get_get.py  post_post.py  put_put.py
tests/unit/: test_apimodel_core.py  test_apimodel_env_and_auth.py  test_cli_recorder.py  test_logging.py  test_ui_playwright.py
